--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
 		<spring-boot.version>2.7.3</spring-boot.version>
 		<lombok.version>1.18.24</lombok.version>
 		<twitter4j.version>4.0.7</twitter4j.version>
+		<httpclient.version>4.5.13</httpclient.version>
+		<json.version>20220320</json.version>
 		<maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
 	</properties>
 	<dependencyManagement>
@@ -43,10 +45,26 @@
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpclient</artifactId>
+				<version>${httpclient.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.json</groupId>
+				<artifactId>json</artifactId>
+				<version>${json.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-test</artifactId>
 				<version>${spring-boot.version}</version>
 				<scope>test</scope>
+				<exclusions>
+					<exclusion>
+						<groupId>org.junit.vintage</groupId>
+						<artifactId>junit-vintage-engine</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
