--- a/twitter-to-kafka-service/src/main/resources/application.yaml
+++ b/twitter-to-kafka-service/src/main/resources/application.yaml
@@ -5,6 +5,11 @@ twitter-to-kafka-service:
     - Spring
     - Kafka
     - Elasticsearch
-  api-key: kOdaNVLqOgyyxNm6qVU6mHETm
-  api-key-secret: WDlSYpv04y0IMTVvI1tpP8NoVGMRR5uQqffHBGU2Z1uzQMEP38
-  bearer-token: AAAAAAAAAAAAAAAAAAAAAH4IggEAAAAACQLz1Sf40OHkArcl0JBmv8r732w%3D7eq0wsltrZ80lTEnFwu1lagAm3jTHScr4NqD0r6O011EI5FyJI
+  enable-mock-tweets: false
+  mock-min-tweet-length: 5
+  mock-max-tweet-length: 15
+  mock-sleep-ms: 10000
+  enable-v2-tweets: true
+  twitter-v2-base-url: https://api.twitter.com/2/tweets/search/stream?tweet.fields=created_at&expansions=author_id
+  twitter-v2-rules-base-url: https://api.twitter.com/2/tweets/search/stream/rules
+  twitter-v2-bearer-token: AAAAAAAAAAAAAAAAAAAAAH4IggEAAAAACQLz1Sf40OHkArcl0JBmv8r732w%3D7eq0wsltrZ80lTEnFwu1lagAm3jTHScr4NqD0r6O011EI5FyJI
